# Footy-Agent

./: .dockerignore  .gcloudignore  .gitignore  COLUMN_DICTIONARY.md  Dockerfile  README.md  app.py  betting_room.html  betting_room_service.py  cloudbuild.yaml  football_data_to_gcs.py  football_ui_service.py  football_web_fallback.py  historical_football_data_to_gcs.py  how_to_run.txt  index.html  pyproject.toml  requirements.txt  standings.html
evals/: test_betting_room.py  test_deterministic.py
frontend/legacy/: index_legacy.html
frontend/static/css/: betting_room.css  styles.css
frontend/static/js/: app.js  betting_room.js  standings.js
frontend/templates/: betting_room.html  index.html  standings.html
scripts/: app.py  betting_room_service.py  football_data_to_gcs.py  football_eda.py  football_ui_service.py  historical_football_data_to_gcs.py
ui/: app.js  betting_room.css  betting_room.js  index.html  standings.js  styles.css
